Add service documentation for HMM-Regime and TCN-Pattern services with detailed descriptions, API endpoints, and technology stacks.

--- a/docker/services/frontend/html/index.html
+++ b/docker/services/frontend/html/index.html
@@ -827,6 +827,7 @@
                     <div><span class="label">Pattern</span><span id="tcn-patterns">16 Typen</span></div>
                 </div>
                 <div class="service-links">
+                    <a href="/service-tcn.html" target="_blank">Info</a>
                     <a href="/tcn/docs" target="_blank">API Docs</a>
                 </div>
             </div>
@@ -844,6 +845,7 @@
                     <div><span class="label">Scorer</span><span id="hmm-scorer">-</span></div>
                 </div>
                 <div class="service-links">
+                    <a href="/service-hmm.html" target="_blank">Info</a>
                     <a href="/hmm/docs" target="_blank">API Docs</a>
                 </div>
             </div>
@@ -861,6 +863,7 @@
                     <div><span class="label">Modelle</span><span id="embedder-models">4 Types</span></div>
                 </div>
                 <div class="service-links">
+                    <a href="/service-embedder.html" target="_blank">Info</a>
                     <a href="/embedder/docs" target="_blank">API Docs</a>
                 </div>
             </div>
